--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="case-study">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" style="background:lightgrey">
                     <h1 class="heading"><span class="purple">My</span><br>Projects</h1><br />
                     <!-- Swiper -->
                     <div class="swiper-container client-swiper">
