--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %}Doug McIntosh{% endblock %}</title>
     <!-- Bootstrap -->
-    <link href="/static/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/styles/bootstrap-theme.css" rel="stylesheet">
+    <link href="static/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="static/styles/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles/swiper.min.css">
 
     <link href="static/styles/style.css" rel="stylesheet" type="text/css">
@@ -78,8 +78,8 @@
     </footer>
 
     <!-- Some Javascript -->
-    <script src="/static/js/jquery-2.1.1.js"></script>
-    <script src="/static/js/swiper.jquery.min.js"></script>
+    <script src="static/js/jquery-2.1.1.js"></script>
+    <script src="static/js/swiper.jquery.min.js"></script>
     <!-- Initialize Client Swiper -->
     <script>
         var swiper1 = new Swiper('.client-swiper', {
@@ -135,7 +135,7 @@
             }
         });</script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="/static/js/jquery.counterup.min.js"></script>
+    <script src="static/js/jquery.counterup.min.js"></script>
     <script>
         // Counterup
         $('.counter').counterUp({
