new root index.html please please please make this work on github pages

--- a/index.html
+++ b/index.html
@@ -1,119 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type">
-    <meta content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{% block title %}Doug McIntosh{% endblock %}</title>
-    <!-- Bootstrap -->
-    <link href="static/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="static/styles/bootstrap-theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/styles/swiper.min.css">
-
-    <link href="static/styles/style.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-    <header class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-6 col-xs-2">
-                    <ul class="main-nav">
-                        <li><a href="{{url_for('index')}}">Home</a></li>
-                        <li><a href="{{url_for('aboutme')}}">About</a></li>
-                        <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
-                        <li><a href="http://www.linkedin.com/in/doug-mcintosh">Contact</a></li>
-                    </ul>
-                    <div>
-                        <h2 class="col-md-6 col-md-pull-4 col-xs-8">Doug McIntosh  Seattle, WA</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <div style="width:100vw;height:2vh;background-color:#37324b"></div>
-    {% block content %}
-    <section class="case-study">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="heading"><span class="purple">My</span>Projects</h2><br />
-                    <!-- Swiper -->
-                    <div class="swiper-container client-swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Musicians/Albums</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Data Visualization</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Something Else</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">another thing</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Add Arrows -->
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    {% endblock content %}
-    {% block search_results %}{% endblock search_results %}
-
-    <div style="width:100vw;height:2vh;background-color:#37324b;position:absolute;bottom:0"></div>
-
-    <!-- Some Javascript -->
-    <script src="static/js/jquery-2.1.1.js"></script>
-    <script src="static/js/swiper.jquery.min.js"></script>
-    <!-- Initialize Client Swiper -->
-    <script>
-        var swiper1 = new Swiper('.client-swiper', {
-            slidesPerView: 3,
-            paginationClickable: true,
-            nextButton: '.swiper-button-next',
-            prevButton: '.swiper-button-prev',
-            spaceBetween: 60,
-            // Responsive breakpoints
-            breakpoints: {
-                // when window width is <= 320px
-                320: {
-                    slidesPerView: 1,
-                    spaceBetween: 10,
-                    pagination: '.swiper-pagination'
-                },
-                // when window width is <= 480px
-                480: {
-                    slidesPerView: 1,
-                    spaceBetween: 20
-                },
-                // when window width is <= 640px
-                640: {
-                    slidesPerView: 1,
-                    spaceBetween: 30
-                }
-            }
-        });
-    </script>
-    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="static/js/jquery.counterup.min.js"></script>-->
-    <script>
-        // Counterup
-        $('.counter').counterUp({
-            time: 1000
-        });
-
-        // Main Navigation
-        $('#menu-toggle').click(function () {
-            $(this).toggleClass('open'),
-                $('.main-nav').toggleClass('show-it');
-        })</script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://jackmanu.github.io/portfolio/templates/index.html" />
